load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")
load(
    "@io_bazel_rules_docker//docker/toolchain_container:toolchain_container.bzl",
    "toolchain_container",
)

toolchain_container(
    name = "base_works",
    base = "@official_ubuntu//image",
)

toolchain_container(
    name = "works",
    base = ":base_works.tar",
    packages = [
        "gcc",
    ]
)

toolchain_container(
    name = "base_fails",
    base = "@rbe_ubuntu16_04//image",
)

toolchain_container(
    name = "fails",
    base = ":base_fails.tar",
    packages = [
        "gcc",
    ]
)
