load(
    "@io_bazel_rules_docker//docker/toolchain_container:toolchain_container.bzl",
    "toolchain_container",
)

toolchain_container(
    name = "base",
    base = "@official_ubuntu//image",
    packages = [
        "ca-certificates",
    ],
)

toolchain_container(
    name = "with_deps",
    base = ":base.tar",
    additional_repos = [
        "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable",
        "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main",
    ],
    keys = [
        "@docker_gpg//file",
        "@llvm_gpg//file",
    ],
    packages = [
        "docker",
        "clang-7",
    ],
)
